@@ -31,6 +31,7 @@ Additions:
    * Add a label signal callback "slide,end"
    * Add "highlighted" and "unhighlighted" callbacks to list, genlist, and gengrid.
    * Add elm_index_delay_change_time_set/get for changing delay change time in index.
+   * Add elm_index smart callback - "language,changed".
 
 Improvements:
 
